--- a/demo/index.haml
+++ b/demo/index.haml
@@ -1,26 +1,18 @@
 %section{role: "region", "aria-label" => "Demo"}
   %article
     %header.m-b_4
-      %h3
-        %a.a.__inner{href: "/docs/index"}
-          %i.fa.fa-flask
-          %span Chemistry Template
+      %a{href: "/"}
+        %img{src: "/assets/images/logo.png", class: "va-t", width: 130, height: 111, alt: "Магазин косметики Pudra.by"}
 
     %nav.demo
       %ul.m-b_2
         %li
-          %a{href: "/docs/components"} Components
+          %a{href: "https://github.com/oskolsky/markup_pudra_shop"} View Source on GitHub
       
       %ol
         %li 
-          %a{href: "/docs/index"} Index
+          %a{href: "/"} Главная
         %li 
-          %a{href: "/docs/grid"} Grid
-        %li 
-          %a{href: "/docs/links"} Links
-        %li 
-          %a{href: "/docs/forms"} Forms
-        %li 
-          %a{href: "/docs/content"} Content
-        %li 
-          %a{href: "/docs/styles"} Styles
+          %a{href: "/catalog"} Каталог
+        %li
+          %a{href: "/catalog_show"} Просмотр товара
