--- a/demo/layout.haml
+++ b/demo/layout.haml
@@ -1,7 +1,7 @@
 !!!
 %html.no-js{lang: "ru-RU"}
   %head
-    %title Chemistry Template
+    %title Магазин косметики Pudra.by
     = haml 'views/layouts/_head'.to_sym
     %link{rel: "stylesheet", href: "/demo/demo.css"}
   
