--- a/index.haml
+++ b/index.haml
@@ -1,2 +1,14 @@
-%section{role: "region", "aria-label" => ""}
+%section.section{role: "region", "aria-label" => ""}
   .ctn
+
+    -#.grid
+      .grid-i.__grid-4.c-bg.__red 1
+      .grid-i.__grid-8.c-bg.__red 1
+
+    .grid
+      .grid-i.__grid-4
+        %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
+      .grid-i.__grid-4
+        %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
+      .grid-i.__grid-4
+        %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
