--- a/views/layouts/_footer.haml
+++ b/views/layouts/_footer.haml
@@ -1,2 +1,68 @@
 %footer#footer.footer{role: "contentinfo"}
-  .ctn
+
+  %section.footer_summary
+    .ctn
+
+  %section.footer_nav
+    .ctn
+      .grid
+        .grid-i.__grid-5.va-m
+          %nav
+            %ul.footer_nav_menu
+              %li.footer_nav_menu_i
+                %a{href: "/contacts", class: "footer_nav_menu_i_a"} Контакты
+              %li.footer_nav_menu_i
+                %a{href: "/details", class: "footer_nav_menu_i_a"} Реквизиты
+              %li.footer_nav_menu_i
+                %a{href: "/career", class: "footer_nav_menu_i_a"} Карьера
+              %li.footer_nav_menu_i
+                %a{href: "/advertisement", class: "footer_nav_menu_i_a"} Реклама
+        .grid-i.__grid-7.va-m
+          %nav.tx.__right
+            %span.tx.__xs.__upper.va-m Мы в социальных сетях:
+            %ul.footer_nav_social.va-m
+              %li.footer_nav_social_i
+                %a{href: "#", class: "footer_nav_social_i_a"}
+                  %i.ico.__social.__vk
+              %li.footer_nav_social_i
+                %a{href: "#", class: "footer_nav_social_i_a"}
+                  %i.ico.__social.__fb
+              %li.footer_nav_social_i
+                %a{href: "#", class: "footer_nav_social_i_a"}
+                  %i.ico.__social.__tw
+              %li.footer_nav_social_i
+                %a{href: "#", class: "footer_nav_social_i_a"}
+                  %i.ico.__social.__yt
+              %li.footer_nav_social_i
+                %a{href: "#", class: "footer_nav_social_i_a"}
+                  %i.ico.__social.__ok
+              %li.footer_nav_social_i
+                %a{href: "#", class: "footer_nav_social_i_a"}
+                  %i.ico.__social.__ig
+              %li.footer_nav_social_i
+                %a{href: "#", class: "footer_nav_social_i_a"}
+                  %i.ico.__social.__p
+              %li.footer_nav_social_i
+                %a{href: "#", class: "footer_nav_social_i_a"}
+                  %i.ico.__social.__gp
+
+  %section.footer_info
+    .ctn
+      .grid
+        .grid-i.__grid-5
+          %article.footer_info_description
+            %p.footer_info_description_t Интернет-магазин косметики и парфюмерии «пудра.by»
+            %p.footer_info_description_tx Яркий и&nbsp;современный магазин косметики и&nbsp;парфюмерии в&nbsp;Киеве и&nbsp;Украине. Большой выбор товаров&mdash; уход за&nbsp;кожей лица и&nbsp;тела, уход за&nbsp;волосами, инструменты, подарки. Профессиональная косметика. Доставка по&nbsp;Киеву и&nbsp;в&nbsp;любую точку Украины.
+        .grid-i.__grid-4
+          %article.footer_info_location
+            %p.footer_info_location_t Регион: Украина и Киев
+            %p.footer_info_location_tx
+              ФОП Дух Н. В.
+              %br
+              Св-во гос. регистрации –№ 761700 от 17.09.2012
+              %br
+              Выдано Деснянской районнной гос. администрацией г. Киева ИНН: 3192518926
+        .grid-i.__grid-3
+          %article.footer_info_copyright
+            %p Copyright © 2009-2013 «Пудра.by».
+            %p Все права защищены.
