--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -7,10 +7,26 @@
 
 //****************************************************************************************************
 //
+// .. BAR
+//
+//****************************************************************************************************
+.bar {
+  background-color: #fff;
+  border-bottom: 3px solid $muted-color;
+  height: 50px;
+  line-height: 50px;
+}
+
+
+
+//****************************************************************************************************
+//
 // .. HEADER
 //
 //****************************************************************************************************
 .header {
+  background-color: #fff;
+  padding: 30px 0;
   @include media-query(desktop) {
     &.__sticky {
       position: fixed;
@@ -25,6 +41,98 @@
 }
 
 
+//****************************************************************************************************
+//
+// .. NAV
+//
+//****************************************************************************************************
+.nav {
+  background-color: $base-color;
+  > .ctn {
+    position: relative;
+  }
+}
+
+//
+// .. MENU
+//
+.menu {
+
+}
+  .menu_i {
+    display: inline-block;
+  }
+    .menu_i_a {
+      color: #fff;
+      display: inline-block;
+      font-size: 14px;
+      font-weight: 600;
+      height: 50px;
+      line-height: 50px;
+      padding: 0 20px;
+      text-transform: uppercase;
+      @include prefixes(transition, all .33s);
+      &:hover {
+        background-color: $major-color;
+        color: #fff;
+      }
+    }
+
+//
+// .. SEARCH
+//
+.search {
+  position: absolute;
+  top: 8px;
+  right: 0;
+}
+  .search_input {
+    background-color: #fff;
+    color: #3b3c40;
+    font-size: 12px;
+    height: 34px;
+    padding: 0 20px 0 50px;
+    vertical-align: middle;
+    width: 313px;
+    &::-webkit-input-placeholder {color: #3b3c40;}
+    &:-moz-placeholder {color: #3b3c40;}
+  }
+  .search_submit {
+    background-color: #e7e7e7;
+    border-left: 1px solid $muted-color;
+    font-size: 12px;
+    font-weight: 700;
+    height: 34px;
+    text-transform: uppercase;
+    vertical-align: middle;
+    width: 85px;
+  }
+  .search_ico {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    margin-top: -12px;
+  }
+
+
+
+
+//****************************************************************************************************
+//
+// .. SECTION
+//
+//****************************************************************************************************
+.section {
+  > .ctn {
+    background-color: #fff;
+    border-right: 3px solid $muted-color;
+    border-bottom: 3px solid $muted-color;
+    border-left: 3px solid $muted-color;
+    padding: 40px 57px 70px;
+  }
+}
+
+
 
 //****************************************************************************************************
 //
@@ -34,3 +142,93 @@
 .footer {
 
 }
+
+//
+// .. FOOTER SUMMARY
+//
+.footer_summary {
+  background-color: #fff;
+  border-top: 3px solid $muted-color;
+}
+
+//
+// .. FOOTER NAV
+//
+.footer_nav {
+  background-color: #fff;
+  border-top: 3px solid $muted-color;
+  padding: 14px 0;
+}
+  // Menu
+  .footer_nav_menu {
+
+  }
+    .footer_nav_menu_i {
+      display: inline-block;
+      &:not(:last-child) {margin-right: 25px;}
+    }
+      .footer_nav_menu_i_a {
+        color: $base-color;
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 30px;
+        text-transform: uppercase;
+        @include prefixes(transition, all .33s);
+        &:hover {color: $major-color;}
+      }
+  // Social navigation
+  .footer_nav_social {
+    display: inline-block;
+    margin-left: 20px;
+  }
+    .footer_nav_social_t {
+      display: inline-block;
+      font-size: 12px;
+    }
+    .footer_nav_social_i {
+      display: inline-block;
+      margin-left: 10px;
+    }
+      .footer_nav_social_i_a {
+        .ico {vertical-align: top;}
+      }
+
+//
+// .. FOOTER INFO
+//
+.footer_info {
+  background-color: $base-color;
+  padding: 25px 0 40px;
+}
+  // Description
+  .footer_info_description {
+    color: #fff;
+    line-height: 18px;
+  }
+    .footer_info_description_t {
+      font-size: 12px;
+      text-transform: uppercase;
+    }
+    .footer_info_description_tx {
+      font-size: 11px;
+      opacity: .7;
+    }
+  // Location
+  .footer_info_location {
+    color: #fff;
+    line-height: 18px;
+  }
+    .footer_info_location_t {
+      font-size: 12px;
+    }
+    .footer_info_location_tx {
+      font-size: 11px;
+      opacity: .5;
+    }
+  // Copyright
+  .footer_info_copyright {
+    color: #fff;
+    font-size: 11px;
+    line-height: 16px;
+    opacity: .5;
+  }
