--- a/assets/stylesheets/layers/styles/styles.scss
+++ b/assets/stylesheets/layers/styles/styles.scss
@@ -96,7 +96,7 @@ h1, h2, h3, h4, h5, h6, .alpha, .beta, .gamma, .delta, .epsilon, .zeta {font-fam
 //
 .va-bl {vertical-align: baseline;}
 .va-t  {vertical-align: top;}
-.va-m  {vertical-align: middle;}
+.va-m  {vertical-align: middle !important;}
 .va-b  {vertical-align: bottom;}
 
 
