--- a/demo/demo.scss
+++ b/demo/demo.scss
@@ -1,11 +1,10 @@
 .demo {
-  margin-left: 6rem;
-  
   li:not(:last-child) {margin-bottom: 1rem;}
 
   ol {
     counter-reset: list;
     > li {
+      margin-left: 20px;
       position: relative;
       &::before {
         counter-increment: list;
