--- a/views/layouts/_footer.haml
+++ b/views/layouts/_footer.haml
@@ -1,6 +1,6 @@
 %footer#footer.footer{role: "contentinfo"}
 
-  %section.footer_summary
+  -#%section.footer_summary
     .ctn
 
   %section.footer_nav
