--- a/views/layouts/_nav.haml
+++ b/views/layouts/_nav.haml
@@ -2,7 +2,7 @@
   .ctn
     %ul.menu
       %li.menu_i
-        %a{href: "/catalogs", class: "menu_i_a"} Каталоги
+        %a{href: "/catalog", class: "menu_i_a __current"} Каталоги
       %li.menu_i
         %a{href: "/brands", class: "menu_i_a"} Бренды
       %li.menu_i
