--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -72,9 +72,24 @@
       padding: 0 20px;
       text-transform: uppercase;
       @include prefixes(transition, all .33s);
-      &:hover {
+      &:hover, &.__current {
         background-color: $major-color;
         color: #fff;
+      }
+      &.__current {
+        position: relative;
+        &::after {
+          content: '';
+          border-left: 8px solid transparent;
+          border-right: 8px solid transparent;
+          border-top: 8px solid $major-color;
+          height: 0;
+          position: absolute;
+          top: 100%;
+          left: 50%;
+          margin-left: -8px;
+          width: 0;
+        }
       }
     }
 
@@ -136,6 +151,271 @@
 
 //****************************************************************************************************
 //
+// .. ITEM
+//
+//****************************************************************************************************
+.items {
+  margin-left: -20px;
+  > .item {margin-left: 20px;}
+}
+
+.items {
+
+}
+  .item {
+    background-color: #fff;
+    border: 1px solid #e4e4e4;
+    display: inline-block;
+    padding: 13px 20px 70px;
+    position: relative;
+    width: 210px;
+    vertical-align: top;
+    @include prefixes(box-sizing, border-box);
+    &.__label {
+      &::before {
+        color: #fff;
+        font-size: 10px;
+        font-weight: 700;
+        height: 20px;
+        line-height: 20px;
+        padding: 0 16px 0 7px;
+        position: absolute;
+        text-transform: uppercase;
+        top: 20px;
+        right: -7px;
+      }
+      &::after {
+        border-right: 7px solid transparent;
+        content: '';
+        height: 0;
+        position: absolute;
+        top: 40px;
+        right: -7px;
+        width: 0;
+      }
+    }
+    &.__new {
+      &::before {
+        content: 'Новинка';
+        background-color: #79c108;
+      }
+      &::after {
+        border-top: 7px solid #5a9300;
+      }
+    }
+    &.__order {
+      &::before {
+        content: 'Под заказ';
+        background-color: #00bee7;
+      }
+      &::after {
+        border-top: 7px solid #0081b1;
+      }
+    }
+    &.__stock {
+      &::before {
+        content: 'Акция';
+        background-color: #fa1951;
+      }
+      &::after {
+        border-top: 7px solid #b7002e;
+      }
+    }
+    &.__leader{
+      &::before {
+        content: 'Лидер продаж';
+        background: #ebb308 url(/assets/images/label.png) center right no-repeat;
+      }
+      &::after {
+        border-top: 7px solid #a16f00;
+      }
+    }
+  }
+    .item_name {
+      margin-bottom: 10px;
+      a {
+        color: #f21249;
+        font-size: 12px;
+        line-height: 14px;
+        text-decoration: underline;
+        &:hover {
+          color: #f21249;
+          text-decoration: none;
+        }
+      }
+    }
+    .item_photo {
+      margin-bottom: 10px;
+      text-align: center;
+    }
+    .item_caption {
+      font-size: 12px;
+      font-weight: 600;
+      line-height: 18px;
+      text-transform: uppercase;
+      a {color: #333;}
+    }
+    .item_price {
+      position: absolute;
+      right: 20px;
+      left: 20px;
+      bottom: 15px;
+    }
+      .item_price_old {
+        font-size: 12px;
+        text-decoration: line-through;
+      }
+      .item_price_new {
+        font-size: 22px;
+        font-weight: 700;
+        line-height: 18px;
+        span {
+          font-size: 13px;
+          font-weight: 600;
+        }
+      }
+
+
+
+//****************************************************************************************************
+//
+// .. SLIDER
+//
+//****************************************************************************************************
+.iosslider {
+  position: relative;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100%;
+  @include prefixes(box-sizing, border-box);
+  .slider {
+    width: 100%;
+    height: 100%;
+    .slide {
+      float: left;
+      width: 100%;
+    }
+  }
+
+  &.__catalog {
+    background-color: #f7f7f7;
+    border: 1px solid $muted-color;
+    padding: 0 0px;
+    .slider {
+      .slide {
+        padding: 40px 19px 30px;
+      }
+    }
+    .slider-nav {
+      position: absolute;
+      top: 10px;
+      left: 20px;
+    }
+    .slider-nav_i {
+      background-color: #99999b;
+      border-radius: 100%;
+      cursor: pointer;
+      display: inline-block;
+      height: 12px;
+      margin: 0 10px;
+      width: 12px;
+      &.__current {
+        background-color: #ee1753;
+      }
+    }
+  }
+
+}
+
+
+
+//****************************************************************************************************
+//
+// .. TABS
+//
+//****************************************************************************************************
+.tabs {
+  &.__catalog {
+    .ui-tabs-nav {
+      margin: 0 0 20px 20px;
+      li {
+        display: inline-block;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 17px;
+        margin-right: 30px;
+        text-transform: uppercase;
+        &.ui-tabs-active {
+          position: relative;
+          &::after {
+            background: url(/assets/images/triangle.png) 0 0 no-repeat;
+            content: '';
+            height: 10px;
+            position: absolute;
+            top: 30px;
+            left: 50%;
+            margin-left: -9px;
+            width: 18px;
+            z-index: 999;
+          }
+          a {
+            color: #f9093a;
+            border-color: #f9093a;
+          }
+        }
+        a {
+          color: #29282d;
+          border-bottom: 1px dashed #29282d;
+        }
+      }
+    }
+    .ui-tabs-panel {
+
+    }
+  }
+}
+
+
+
+
+//****************************************************************************************************
+//
+// .. SITE MAP
+//
+//****************************************************************************************************
+//.site-map {
+//  padding: 0 0 40px 0;
+//}
+//  .site-map_nav {
+//    display: inline-block;
+//    &:not(:last-child) {
+//      margin-right: 60px;
+//    }
+//  }
+//    .site-map_nav_t {
+//      font-size: 14px;
+//      font-weight: 700;
+//      line-height: 21px;
+//      margin-bottom: 20px;
+//      text-transform: uppercase;
+//    }
+//    .site-map_nav_a {
+//      color: $base-color;
+//      clear: left;
+//      font-size: 12px;
+//      float: left;
+//      line-height: 15px;
+//      opacity: .8;
+//      text-decoration: underline;
+//      &:not(:last-child) {margin-bottom: 10px;}
+//      &:hover {color: #fa1951;}
+//    }
+
+
+
+//****************************************************************************************************
+//
 // .. FOOTER
 //
 //****************************************************************************************************
@@ -146,10 +426,10 @@
 //
 // .. FOOTER SUMMARY
 //
-.footer_summary {
-  background-color: #fff;
-  border-top: 3px solid $muted-color;
-}
+//.footer_summary {
+//  background-color: #fff;
+//  border-top: 3px solid $muted-color;
+//}
 
 //
 // .. FOOTER NAV
