--- a/views/layouts/_header.haml
+++ b/views/layouts/_header.haml
@@ -2,6 +2,6 @@
   .ctn
     .grid
       .grid-i.__grid-2.va-m
-        %a{href: "#"}
+        %a{href: "/"}
           %img{src: "/assets/images/logo.png", class: "va-t", width: 130, height: 111, alt: "Магазин косметики Pudra.by"}
       .grid-i.__grid-10.va-m
