--- a/index.haml
+++ b/index.haml
@@ -1,69 +1,79 @@
-%section.section{role: "region", "aria-label" => ""}
+%section.section.__home.m-b_3{role: "region", "aria-label" => ""}
   .ctn
+    .p-t_4
 
-    #tabs.tabs.__catalog
-      %ul
-        %li
-          %a{href: "#news"} Новинки
-        %li
-          %a{href: "#stock"} Акции
-        %li
-          %a{href: "#leader"} Лидеры продаж
-        %li
-          %a{href: "#order"} Под заказ
-      #news
-        .iosslider.__catalog
-          .slider
-            - 1.upto(5) do
-              .slide
-                .items
+      .m-b_4
+        #tabs.tabs.__catalog
+          %ul
+            %li
+              %a{href: "#news"} Новинки
+            %li
+              %a{href: "#stock"} Акции
+            %li
+              %a{href: "#leader"} Лидеры продаж
+            %li
+              %a{href: "#order"} Под заказ
+          #news
+            .layer
+              .iosslider.__catalog
+                .slider
+                  - 1.upto(5) do
+                    .slide
+                      .items
+                        - 1.upto(4) do
+                          = haml '/views/common/item/_item_new'.to_sym
+                %ul.slider-nav
+                  %li.slider-nav_i.__current
                   - 1.upto(4) do
-                    = haml '/views/common/item/_item_new'.to_sym
-          .slider-nav
-            .slider-nav_i.__current
-            - 1.upto(4) do
-              .slider-nav_i
-      #stock
-        .iosslider.__catalog
-          .slider
-            - 1.upto(5) do
-              .slide
-                .items
+                    %li.slider-nav_i
+                %a{href: "/catalog", class: "slider-more"} Все новинки
+          #stock
+            .layer
+              .iosslider.__catalog
+                .slider
+                  - 1.upto(5) do
+                    .slide
+                      .items
+                        - 1.upto(4) do
+                          = haml '/views/common/item/_item_stock'.to_sym
+                %ul.slider-nav
+                  %li.slider-nav_i.__current
                   - 1.upto(4) do
-                    = haml '/views/common/item/_item_stock'.to_sym
-          .slider-nav
-            .slider-nav_i.__current
-            - 1.upto(4) do
-              .slider-nav_i
-      #leader
-        .iosslider.__catalog
-          .slider
-            - 1.upto(5) do
-              .slide
-                .items
+                    %li.slider-nav_i
+                %a{href: "/catalog", class: "slider-more"} Все акции
+          #leader
+            .layer
+              .iosslider.__catalog
+                .slider
+                  - 1.upto(5) do
+                    .slide
+                      .items
+                        - 1.upto(4) do
+                          = haml '/views/common/item/_item_leader'.to_sym
+                %ul.slider-nav
+                  %li.slider-nav_i.__current
                   - 1.upto(4) do
-                    = haml '/views/common/item/_item_leader'.to_sym
-          .slider-nav
-            .slider-nav_i.__current
-            - 1.upto(4) do
-              .slider-nav_i
-      #order
-        .iosslider.__catalog
-          .slider
-            - 1.upto(5) do
-              .slide
-                .items
+                    %li.slider-nav_i
+                %a{href: "/catalog", class: "slider-more"} Все лидеры продаж
+          #order
+            .layer
+              .iosslider.__catalog
+                .slider
+                  - 1.upto(5) do
+                    .slide
+                      .items
+                        - 1.upto(4) do
+                          = haml '/views/common/item/_item_order'.to_sym
+                %ul.slider-nav
+                  %li.slider-nav_i.__current
                   - 1.upto(4) do
-                    = haml '/views/common/item/_item_order'.to_sym
-          .slider-nav
-            .slider-nav_i.__current
-            - 1.upto(4) do
-              .slider-nav_i
+                    %li.slider-nav_i
+                %a{href: "/catalog", class: "slider-more"} Все под заказ
 
-    .grid
-      .grid-i.__grid-4
-        %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
-      .grid-i.__grid-4
-        %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
-      .grid-i.__grid-4
-        %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
+      .grid
+        .grid-i.__grid-4
+          %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
+        .grid-i.__grid-4
+          %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
+        .grid-i.__grid-4
+          %img{src: "/assets/images/blank.gif", class: "c-bg __gray", width: "100%", height: 200, alt: ""}
