--- a/assets/stylesheets/layers/project/icons.scss
+++ b/assets/stylesheets/layers/project/icons.scss
@@ -26,6 +26,16 @@
     &.__p  {background-position: -180px 0;}
     &.__gp {background-position: -210px 0;}
   }
+  &.__14 {
+    @include size(14, 14);
+    background-image: url(/assets/images/icons/ico-14.png);
+    &.__refresh {background-position: 0 0;}
+  }
+  &.__16 {
+    @include size(16, 16);
+    background-image: url(/assets/images/icons/ico-16.png);
+    &.__pront {background-position: 0 0;}
+  }
   &.__24 {
      @include size(24, 24);
      background-image: url(/assets/images/icons/ico-24.png);
