--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -140,10 +140,13 @@
 .section {
   > .ctn {
     background-color: #fff;
-    border-right: 3px solid $muted-color;
-    border-bottom: 3px solid $muted-color;
-    border-left: 3px solid $muted-color;
-    padding: 40px 57px 70px;
+    border: 3px solid $muted-color;
+    padding: 0 57px 70px;
+  }
+  &.__home {
+    > .ctn {
+      border-top: none;
+    }
   }
 }
 
@@ -154,11 +157,6 @@
 // .. ITEM
 //
 //****************************************************************************************************
-.items {
-  margin-left: -20px;
-  > .item {margin-left: 20px;}
-}
-
 .items {
 
 }
@@ -171,6 +169,7 @@
     width: 210px;
     vertical-align: top;
     @include prefixes(box-sizing, border-box);
+    &:not(:last-child) {margin-right: 14px;}
     &.__label {
       &::before {
         color: #fff;
@@ -282,6 +281,10 @@
 // .. SLIDER
 //
 //****************************************************************************************************
+.imageslider {
+  position: relative;
+}
+
 .iosslider {
   position: relative;
   top: 0;
@@ -297,35 +300,55 @@
       width: 100%;
     }
   }
+}
 
-  &.__catalog {
-    background-color: #f7f7f7;
-    border: 1px solid $muted-color;
-    padding: 0 0px;
-    .slider {
-      .slide {
-        padding: 40px 19px 30px;
-      }
-    }
-    .slider-nav {
-      position: absolute;
-      top: 10px;
-      left: 20px;
-    }
-    .slider-nav_i {
-      background-color: #99999b;
-      border-radius: 100%;
-      cursor: pointer;
-      display: inline-block;
-      height: 12px;
-      margin: 0 10px;
-      width: 12px;
-      &.__current {
-        background-color: #ee1753;
-      }
+.slider-nav {
+
+}
+  .slider-nav_i {
+    background-color: #99999b;
+    border-radius: 100%;
+    cursor: pointer;
+    display: inline-block;
+    height: 12px;
+    margin: 0 10px;
+    width: 12px;
+    &.__current, &.cycle-pager-active {
+      background-color: #ee1753;
     }
   }
+    .slider-more {
+      color: #fa1951;
+      font-size: 12px;
+      position: absolute;
+      top: 10px;
+      right: 29px;
+      text-decoration: underline;
+      &:hover {text-decoration: none;}
+    }
 
+// .. Catalog
+.iosslider.__catalog {
+  .slider {
+    .slide {
+      padding: 40px 28px 30px;
+    }
+  }
+  .slider-nav {
+    position: absolute;
+    top: 10px;
+    left: 18px;
+  }
+}
+
+// .. Banners
+.imageslider.__banners {
+  .slider-nav {
+    position: absolute;
+    right: 10px;
+    bottom: 35px;
+    z-index: 999;
+  }
 }
 
 
@@ -338,7 +361,7 @@
 .tabs {
   &.__catalog {
     .ui-tabs-nav {
-      margin: 0 0 20px 20px;
+      margin: 0 0 20px 29px;
       li {
         display: inline-block;
         font-size: 16px;
@@ -411,6 +434,93 @@
 //      &:not(:last-child) {margin-bottom: 10px;}
 //      &:hover {color: #fa1951;}
 //    }
+
+
+
+//****************************************************************************************************
+//
+// .. ELEMENTS
+//
+//****************************************************************************************************
+//
+// .. LAYER
+//
+.layer {
+  background-color: #f7f7f7;
+  border: 1px solid $muted-color;
+  @include prefixes(box-sizing, border-box);
+}
+
+//
+// .. BREADCRUMBS
+//
+.breadcrumbs {
+
+}
+  .breadcrumbs_i {
+    color: #333;
+    font-size: 11px;
+    line-height: 16px;
+    margin-right: 25px;
+    position: relative;
+    &:hover {color: #333;}
+    &:not(:last-child) {
+      &::after {
+        background: url(/assets/images/chevron.png) 0 0 no-repeat;
+        content: '';
+        height: 5px;
+        position: absolute;
+        top: 6px;
+        right: -15px;
+        width: 3px;
+      }
+    }
+    &.__current {color: #fa0736;}
+  }
+
+//
+// .. HEADLINE
+//
+.headline {
+  border-bottom: 5px solid $base-color;
+  padding: 20px 0 25px 0;
+}
+  .headline_t {
+    line-height: 1;
+    text-transform: uppercase;
+  }
+  .headline_print {
+    color: #333;
+    font-size: 11px;
+    line-height: 16px;
+    &:hover {color: #333;}
+    .ico {
+      margin-right: 10px;
+      position: relative;
+      top: 3px;
+    }
+  }
+
+//
+// .. LOAD MORE
+//
+.load {
+  background-color: #eb1c5c;
+  color: #fff;
+  display: block;
+  font-size: 12px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  text-transform: uppercase;
+  @include linear-gradient(horizontal, #e62368, #f60c40);
+  &:hover {color: #fff;}
+  .ico {
+    margin-left: 30px;
+    position: relative;
+    top: 2px;
+  }
+}
 
 
 
