--- a/assets/stylesheets/layers/styles/styles.scss
+++ b/assets/stylesheets/layers/styles/styles.scss
@@ -94,10 +94,10 @@ h1, h2, h3, h4, h5, h6, .alpha, .beta, .gamma, .delta, .epsilon, .zeta {font-fam
 //
 // .. Vertical-align
 //
-.va-bl {vertical-align: baseline;}
-.va-t  {vertical-align: top;}
-.va-m  {vertical-align: middle !important;}
-.va-b  {vertical-align: bottom;}
+.va-bl {vertical-align: baseline !important;}
+.va-t  {vertical-align: top      !important;}
+.va-m  {vertical-align: middle   !important;}
+.va-b  {vertical-align: bottom   !important;}
 
 
 
