--- a/views/common/item/_item.haml
+++ b/views/common/item/_item.haml
@@ -1,5 +1,5 @@
 - hash = rand(9999)
-%article.item.__label.__new
+%article.item
   %header.item_name
     %a{href: "/catalog_show#{hash}"} Relouis
   .item_photo
@@ -8,5 +8,5 @@
   .item_caption
     %a{href: "/catalog_show#{hash}"} Микронизированные компактные румяна La Mia Italia
   %footer.item_price
-    .item_price_old.format-money.__rub 32000
-    .item_price_new.format-money.__rub 17000
+    .item_price_new.format-money.__rub
+      = rand(10000..20000)
