--- a/views/common/item/_item_hit.haml
+++ b/views/common/item/_item_hit.haml
@@ -1,5 +1,5 @@
 - hash = rand(9999)
-%article.item.__label.__leader
+%article.item.__badge.__hit
   %header.item_name
     %a{href: "/catalog_show#{hash}"} Dance legend
   .item_photo
