--- a/views/common/item/_item_new.haml
+++ b/views/common/item/_item_new.haml
@@ -1,5 +1,5 @@
 - hash = rand(9999)
-%article.item.__label.__new
+%article.item.__badge.__new
   %header.item_name
     %a{href: "/catalog_show#{hash}"} Relouis
   .item_photo
