--- a/views/common/item/_item_stock.haml
+++ b/views/common/item/_item_stock.haml
@@ -1,5 +1,5 @@
 - hash = rand(9999)
-%article.item.__label.__stock
+%article.item.__badge.__stock
   %header.item_name
     %a{href: "/catalog_show#{hash}"} Max Factor
   .item_photo
