--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -170,7 +170,7 @@
     vertical-align: top;
     @include prefixes(box-sizing, border-box);
     &:not(:last-child) {margin-right: 14px;}
-    &.__label {
+    &.__badge {
       &::before {
         color: #fff;
         font-size: 10px;
@@ -196,7 +196,7 @@
     &.__new {
       &::before {
         content: 'Новинка';
-        background-color: #79c108;
+        background-color: $new-color;
       }
       &::after {
         border-top: 7px solid #5a9300;
@@ -205,7 +205,7 @@
     &.__order {
       &::before {
         content: 'Под заказ';
-        background-color: #00bee7;
+        background-color: $order-color;
       }
       &::after {
         border-top: 7px solid #0081b1;
@@ -214,16 +214,16 @@
     &.__stock {
       &::before {
         content: 'Акция';
-        background-color: #fa1951;
+        background-color: $stock-color;
       }
       &::after {
         border-top: 7px solid #b7002e;
       }
     }
-    &.__leader{
+    &.__hit {
       &::before {
         content: 'Лидер продаж';
-        background: #ebb308 url(/assets/images/label.png) center right no-repeat;
+        background: $hit-color url(/assets/images/hit_s.png) center right no-repeat;
       }
       &::after {
         border-top: 7px solid #a16f00;
@@ -273,6 +273,95 @@
           font-weight: 600;
         }
       }
+
+
+
+//****************************************************************************************************
+//
+// .. Filter
+//
+//****************************************************************************************************
+.filter {
+
+}
+  .filter_badge {
+
+  }
+    .filter_badge_i {
+      height: 40px;
+      line-height: 40px;
+      padding: 0 18px;
+      &.__new   {background-color: $new-color;}
+      &.__stock {background-color: $stock-color;}
+      &.__hit   {background:       $hit-color url(/assets/images/hit_l.png) 0 0 no-repeat;}
+      &.__order {background-color: $order-color;}
+      &:not(:last-child) {margin-bottom: 3px;}
+      .form_label {
+        color: #fff;
+        font-size: 13px;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
+        .form_checkbox.form_el.__fake {
+          margin-right: 17px;
+          top: 2px;
+        }
+    }
+  .filter_block {
+
+  }
+    .filter_block_t {
+      border-bottom: 3px solid #e2e2e2;
+      cursor: pointer;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 1;
+      padding: 15px 0;
+      position: relative;
+      .fa {
+        font-size: 10px;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        @include prefixes(transform, translate(0, -50%));
+      }
+    }
+    .filter_block_b {
+      border-bottom: 1px solid #e2e2e2;
+      display: none;
+    }
+
+    // .. Accordion
+    .filter_accordion {
+
+    }
+      .filter_accordion_i {
+        padding-left: 10px;
+        &:not(:last-child) {
+          border-bottom: 1px solid #e2e2e2;
+        }
+      }
+        .filter_accordion_i_t {
+          cursor: pointer;
+          font-size: 13px;
+          font-weight: 600;
+          line-height: 40px;
+          text-transform: uppercase;
+          .fa {
+            font-size: 11px;
+            margin-right: 15px;
+          }
+          &.__open {
+            color: #f21249;
+            .fa {
+              @include prefixes(transform, rotate(90deg));
+            }
+          }
+        }
+        .filter_accordion_i_b {
+          display: none;
+          padding-bottom: 10px;
+        }
 
 
 
