--- a/views/common/item/_item_order.haml
+++ b/views/common/item/_item_order.haml
@@ -1,5 +1,5 @@
 - hash = rand(9999)
-%article.item.__label.__order
+%article.item.__badge.__order
   %header.item_name
     %a{href: "/catalog_show#{hash}"} Dance legend
   .item_photo
