--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -71,6 +71,7 @@
 //
 //****************************************************************************************************
 @import "layers/project/icons";
+@import "layers/project/sprites";
 @import "layers/project/project";
 @import "layers/project/shame";
 
