--- a/assets/stylesheets/config.scss
+++ b/assets/stylesheets/config.scss
@@ -62,7 +62,7 @@ $max-width-list: (1180px, 940px, 620px);
 $base-bg: #f2f2f2;
 $base-color: #272727;
 $base-font-family: "Open Sans", Helvetica, Arial, sans-serif;
-$base-font-size-list: (1.5rem, 1.5rem, 1.5rem);
+$base-font-size-list: (15px, 15px, 15px);
 $base-font-weight: 400;
 $base-line-height-list: (1.5, 1.5, 1.5);
 
@@ -72,21 +72,21 @@ $base-line-height-list: (1.5, 1.5, 1.5);
 $h-font-family: $base-font-family, Times, "Times New Roman", serif;
 
 $h1-font-size-list: (30px, 30px, 30px);
-$h2-font-size-list: (3rem, 3rem, 3rem);
+$h2-font-size-list: (14px, 14px, 14px);
 $h3-font-size-list: (2.5rem, 2.5rem, 2.5rem);
 $h4-font-size-list: (2rem, 2rem, 2rem);
 $h5-font-size-list: (inherit, inherit, inherit);
 $h6-font-size-list: (inherit, inherit, inherit);
 
 $h1-font-weight-list: (700, 700, 700);
-$h2-font-weight-list: (600, 600, 600);
+$h2-font-weight-list: (700, 700, 700);
 $h3-font-weight-list: (600, 600, 600);
 $h4-font-weight-list: (600, 600, 600);
 $h5-font-weight-list: (600, 600, 600);
 $h6-font-weight-list: (inherit, inherit, inherit);
 
 $h1-line-height-list: (16px, 16px, 16px);
-$h2-line-height-list: (1.125, 1.125, 1.125);
+$h2-line-height-list: (20px, 20px, 20px);
 $h3-line-height-list: (1.25, 1.25, 1.25);
 $h4-line-height-list: (1.375, 1.375, 1.375);
 $h5-line-height-list: (inherit, inherit, inherit);
