--- a/assets/stylesheets/layers/project/icons.scss
+++ b/assets/stylesheets/layers/project/icons.scss
@@ -1,15 +1,3 @@
-@mixin size($w, $h) {
-  width:  #{$w}px;
-  height: #{$h}px;
-}
-
-
-
-//****************************************************************************************************
-//
-// .. ICONS
-//
-//****************************************************************************************************
 .ico {
   display: inline-block;
   background-color: transparent;
@@ -40,5 +28,12 @@
      @include size(24, 24);
      background-image: url(/assets/images/icons/ico-24.png);
      &.__search {background-position: 0 0;}
+  }
+  &.__30 {
+    @include size(30, 30);
+    background-image: url(/assets/images/icons/ico-30.png);
+    &.__user {background-position: 0 0;}
+    &.__lock {background-position: -30px 0;}
+    &.__stop {background-position: -60px 0;}
   }
 }
