--- a/assets/stylesheets/layers/project/project.scss
+++ b/assets/stylesheets/layers/project/project.scss
@@ -170,6 +170,13 @@
     vertical-align: top;
     @include prefixes(box-sizing, border-box);
     &:not(:last-child) {margin-right: 14px;}
+    &:hover {
+      border-color: #fa1951;
+      box-shadow: inset 0 0 0 4px #fa1951;
+      &.__badge {
+        &::before, &::after {display: none;}
+      }
+    }
     &.__badge {
       &::before {
         color: #fff;
@@ -622,92 +629,185 @@
 
 }
 
-//
-// .. FOOTER SUMMARY
-//
-//.footer_summary {
-//  background-color: #fff;
-//  border-top: 3px solid $muted-color;
-//}
-
-//
-// .. FOOTER NAV
-//
-.footer_nav {
-  background-color: #fff;
-  border-top: 3px solid $muted-color;
-  padding: 14px 0;
-}
-  // Menu
-  .footer_nav_menu {
-
-  }
-    .footer_nav_menu_i {
-      display: inline-block;
-      &:not(:last-child) {margin-right: 25px;}
-    }
-      .footer_nav_menu_i_a {
-        color: $base-color;
-        font-size: 14px;
-        font-weight: 700;
-        line-height: 30px;
-        text-transform: uppercase;
-        @include prefixes(transition, all .33s);
-        &:hover {color: $major-color;}
+  //
+  // .. Sections
+  //
+  .footer_section {
+    &.__links {
+      background-color: #fff;
+      border-top: 3px solid $muted-color;
+      padding: 35px 0;
+      > .ctn {
+        position: relative;
+        &::before, &::after {
+          background-color: #f0f0f0;
+          content: '';
+          position: absolute;
+          top: -35px;
+          bottom: -15px;
+          width: 1px;
+        }
+        &::before {left: 180px;}
+        &::after  {left: 720px;}
       }
-  // Social navigation
-  .footer_nav_social {
-    display: inline-block;
-    margin-left: 20px;
+      h2 {margin-bottom: 5px;}
+      ul {
+        li {
+          line-height: 14px;
+          &:not(:last-child) {margin-bottom: 5px;}
+          a {
+            color: #4c4c4c;
+            font-size: 12px;
+            line-height: inherit;
+            text-decoration: underline;
+            &:hover {
+              color: #f21249;
+              text-decoration: none;
+            }
+          }
+        }
+      }
+    }
+    &.__nav {
+      background-color: #fff;
+      border-top: 3px solid $muted-color;
+      padding: 15px 0;
+    }
+    &.__info {
+      background-color: $base-color;
+      color: #fff;
+      padding: 25px 0 40px;
+    }
   }
-    .footer_nav_social_t {
-      display: inline-block;
-      font-size: 12px;
+
+    //
+    // .. Navigation
+    //
+    .footer_nav {
+
     }
-    .footer_nav_social_i {
+      .footer_nav_i {
+        display: inline-block;
+        &:not(:last-child) {margin-right: 25px;}
+      }
+        .footer_nav_i_a {
+          color: #272727;
+          font-size: 14px;
+          font-weight: 700;
+          text-transform: uppercase;
+          &:hover {
+            color: $major-color;
+          }
+        }
+
+    //
+    // .. Social
+    //
+    .footer_social {
       display: inline-block;
-      margin-left: 10px;
+      margin-left: 20px;
     }
-      .footer_nav_social_i_a {
-        .ico {vertical-align: top;}
+      .footer_social_i {
+        display: inline-block;
+        margin-left: 10px;
+      }
+        .footer_social_i_a {
+          .ico {vertical-align: top;}
+        }
+
+    //
+    // .. .Payment
+    //
+    .footer_payment {
+      padding-left: 50px;
+    }
+      .footer_payment_i {
+        display: inline-block;
+        padding: 10px;
+        position: relative;
+        &::before, &::after {
+          content: '';
+          position: absolute;
+        }
+        &::before {
+          background-color: #e1e1e2;
+          top: 10px;
+          bottom: 10px;
+          left: 0;
+          width: 1px;
+        }
+        &.__cash {
+          border: none;
+          font-size: 13px;
+          line-height: 16px;
+          text-align: center;
+          a {color: #4c4c4c;}
+          &::before {display: none;}
+        }
+        &.__visa {
+          &::after {
+            background-color: #e1e1e2;
+            height: 1px;
+            right: 10px;
+            bottom: 0;
+            left: 10px;
+          }
+        }
+        &.__wm {
+          &::after {
+            background-color: #e1e1e2;
+            height: 1px;
+            right: 10px;
+            bottom: 0;
+            left: 10px;
+          }
+        }
+        &.__mc {
+
+        }
+        &.__ep {
+
+        }
       }
 
-//
-// .. FOOTER INFO
-//
-.footer_info {
-  background-color: $base-color;
-  padding: 25px 0 40px;
-}
-  // Description
-  .footer_info_description {
-    color: #fff;
-    line-height: 18px;
-  }
-    .footer_info_description_t {
-      font-size: 12px;
-      text-transform: uppercase;
+    //
+    // .. Partnerships
+    //
+    .footer_partnerships {
+      padding-left: 50px;
     }
-    .footer_info_description_tx {
-      font-size: 11px;
-      opacity: .7;
+      .footer_partnerships_i {
+        display: inline-block;
+        padding: 0 10px;
+        &:first-child {padding-left: 0;}
+        &:last-child  {padding-right: 0;}
+        &:not(:last-child) {border-right: 1px solid #e1e1e2;}
+      }
+
+    //
+    // .. Safety
+    //
+    .footer_safety {
+      padding-left: 40px;
     }
-  // Location
-  .footer_info_location {
-    color: #fff;
-    line-height: 18px;
-  }
-    .footer_info_location_t {
-      font-size: 12px;
-    }
-    .footer_info_location_tx {
-      font-size: 11px;
-      opacity: .5;
-    }
-  // Copyright
-  .footer_info_copyright {
-    color: #fff;
-    font-size: 11px;
-    line-height: 16px;
-    opacity: .5;
-  }
+      .footer_safety_i {
+        padding-left: 30px;
+        position: relative;
+        &:not(:last-child) {margin-bottom: 10px;}
+        .ico {
+          position: absolute;
+          top: 5px;
+          left: -10px;
+        }
+        a {
+          color: #f21249;
+          font-size: 12px;
+          line-height: 30px;
+          text-decoration: underline;
+          &:hover {text-decoration: none;}
+        }
+        figcaption {
+          font-size: 11px;
+          line-height: 14px;
+        }
+      }
