--- a/views/layouts/_footer.haml
+++ b/views/layouts/_footer.haml
@@ -29,7 +29,7 @@
         .grid-i.__grid-7
           .footer_payment.m-b_3
             %h2.tx.__upper Мы принимаем к оплате
-            %nav.tx.__center1
+            %nav
               .d-ib.va-m
                 .footer_payment_i.__cash
                   %a{href: "#"}
