--- a/index.haml
+++ b/index.haml
@@ -1,4 +1,4 @@
-%section.section.__home.m-b_3{role: "region", "aria-label" => ""}
+%section.section.__home{role: "region", "aria-label" => ""}
   .ctn
     .p-t_4
       .m-b_4
