--- a/views/layouts/_site_map.haml
+++ b/views/layouts/_site_map.haml
@@ -1,9 +1,8 @@
 %section#site-map.site-map
   .ctn
     .site-map_toggle
-      %a{href: "#", class: "site-map_toggle_a a __pseudo __inner"}
+      %a{href: "#", class: "site-map_toggle_a"}
         %span Карта сайта
-        %i.fa.fa-chevron-down
     .site-map_navs
       %nav.site-map_nav.__catalog.cf
         %h2.tx.__upper.nowrap.m-b_2 Каталоги
