--- a/views/layouts/_bar.haml
+++ b/views/layouts/_bar.haml
@@ -1,2 +1,51 @@
 %section#bar.bar
   .ctn
+    .grid.__no-gutter
+
+      .bar_i.__location.grid-i.__grid-2
+        .bar_i_cell
+          .bar_i_inner.__location
+            Регион:&nbsp;
+            %a{href: "#", class: "bar_i_inner_a"}
+              %span Беларусь
+          %nav.dropdown.__menu
+            %ul.dropdown_menu
+              %li.dropdown_menu_i
+                %a{href: "#", class: "dropdown_menu_i_a"} Беларусь
+              %li.dropdown_menu_i
+                %a{href: "#", class: "dropdown_menu_i_a"} Казахстан
+              %li.dropdown_menu_i
+                %a{href: "#", class: "dropdown_menu_i_a"} Украина
+              %li.dropdown_menu_i
+                %a{href: "#", class: "dropdown_menu_i_a"} Россия
+
+      .bar_i.__currency.grid-i.__grid-2
+        .bar_i_cell
+          .bar_i_inner.__currency
+            Валюта:&nbsp;
+            %a{href: "#", class: "bar_i_inner_a"}
+              %span BYR
+          %nav.dropdown.__menu
+            %ul.dropdown_menu
+              %li.dropdown_menu_i
+                %a{href: "#", class: "dropdown_menu_i_a"} USD
+              %li.dropdown_menu_i
+                %a{href: "#", class: "dropdown_menu_i_a"} EUR
+              %li.dropdown_menu_i
+                %a{href: "#", class: "dropdown_menu_i_a"} RUB
+              %li.dropdown_menu_i
+                %a{href: "#", class: "dropdown_menu_i_a"} UGR
+
+      .bar_i.__contacts.grid-i.__grid-5
+        .bar_i_cell
+          .bar_i_inner.__contacts
+            +375 (29) 610-26-26
+            &nbsp;
+            +375 (29) 268-90-90
+
+      .bar_i.__contacts.grid-i.__grid-3
+        .bar_i_cell
+          .bar_i_inner
+            Моя пудра
+          .bar_i_inner
+            Выйти
